logs/pythongrid.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/drmaa'...
Listing './lib/python3.5/site-packages/drmaa-0.7.8.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pythongrid'...
Compiling './lib/python3.5/site-packages/pythongrid/example.py'...
***   File "./lib/python3.5/site-packages/pythongrid/example.py", line 64
    print "====================================="
                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pythongrid/example_map_reduce.py'...
***   File "./lib/python3.5/site-packages/pythongrid/example_map_reduce.py", line 46
    print "reducing result"
                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pythongrid/libpythongrid.py'...
***   File "./lib/python3.5/site-packages/pythongrid/libpythongrid.py", line 61
    except Exception, detail:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pythongrid/pythongrid_cfg.py'...
***   File "./lib/python3.5/site-packages/pythongrid/pythongrid_cfg.py", line 37
    except Exception, details:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pythongrid/pythongrid_web.py'...
***   File "./lib/python3.5/site-packages/pythongrid/pythongrid_web.py", line 149
    print sys.argv
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pythongrid/zmq_serv.py'...
***   File "./lib/python3.5/site-packages/pythongrid/zmq_serv.py", line 38
    print "server is running on:", home_address
                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pythongrid/zmq_test.py'...
***   File "./lib/python3.5/site-packages/pythongrid/zmq_test.py", line 24
    print "hint: make sure to start zmq_serv.py before executing this script!"
                                                                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pythongrid-0.2.egg-info'...
Listing './lib/python3.5/site-packages/pyzmq-16.0.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zmq'...
Listing './lib/python3.5/site-packages/zmq/.libs'...
Listing './lib/python3.5/site-packages/zmq/asyncio'...
Listing './lib/python3.5/site-packages/zmq/auth'...
Listing './lib/python3.5/site-packages/zmq/auth/asyncio'...
Listing './lib/python3.5/site-packages/zmq/backend'...
Listing './lib/python3.5/site-packages/zmq/backend/cffi'...
Listing './lib/python3.5/site-packages/zmq/backend/cython'...
Listing './lib/python3.5/site-packages/zmq/devices'...
Listing './lib/python3.5/site-packages/zmq/eventloop'...
Listing './lib/python3.5/site-packages/zmq/eventloop/minitornado'...
Listing './lib/python3.5/site-packages/zmq/eventloop/minitornado/platform'...
Listing './lib/python3.5/site-packages/zmq/green'...
Listing './lib/python3.5/site-packages/zmq/green/eventloop'...
Listing './lib/python3.5/site-packages/zmq/log'...
Listing './lib/python3.5/site-packages/zmq/ssh'...
Listing './lib/python3.5/site-packages/zmq/sugar'...
Listing './lib/python3.5/site-packages/zmq/tests'...
Listing './lib/python3.5/site-packages/zmq/tests/asyncio'...
Listing './lib/python3.5/site-packages/zmq/utils'...
Listing './share'...
Listing './share/python-wheels'...
